<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFF"
    android:layout_margin="10dp"
    tools:context="com.oneproject.www.smartoday.LoginActivity">
    <TextView
        android:id="@+id/tvUsername"
        style="@style/TextStyle"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/color_logout"
        android:text="test"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <EditText
        style="@style/TextView_whiteBack"
        android:layout_marginTop="10dp"
        android:hint="@string/password_check"
        android:id="@+id/etUser"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/color_logout"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <Button
            android:layout_marginStart="5dp"
            android:id="@+id/submit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_submit"
            android:textColor="@color/color_logout" />

    </LinearLayout>
</LinearLayout>
