<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.oneproject.www.smartoday.MemberAddActivity">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:background="@drawable/shapemain"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="20dp">
                    <TextView
                        android:text="@string/signup_id"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:textColor="#000"
                        android:layout_width="70dp"
                        android:layout_height="20dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:orientation="horizontal">
                        <EditText
                            android:textSize="16dp"
                            android:id="@+id/etId"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"/>
                        <Button
                            android:layout_marginBottom="5dp"
                            android:textSize="12dp"
                            android:id="@+id/btCheck"
                            android:background="@drawable/dayofweek_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/signup_cofirm" />
                    </LinearLayout>
                    <TextView
                        android:textColor="#000"
                        android:text="@string/signup_pass"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:layout_width="70dp"
                        android:layout_height="20dp"/>
                    <EditText
                        android:inputType="textPassword"
                        android:textSize="16dp"
                        android:id="@+id/etPass"
                        android:layout_width="150dp"
                        android:layout_height="40dp"/>
                    <TextView
                        android:textColor="#000"
                        android:text="@string/signup_pass2"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:orientation="horizontal">
                        <EditText
                            android:inputType="textPassword"
                            android:textSize="16dp"
                            android:id="@+id/etPass2"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"/>
                        <TextView
                            android:textSize="12sp"
                            android:id="@+id/tvpassCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <TextView
                        android:textColor="#000"
                        android:text="@string/signup_name"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:layout_width="110dp"
                        android:layout_height="20dp"/>
                    <EditText
                        android:textSize="16dp"
                        android:id="@+id/etName"
                        android:layout_width="150dp"
                        android:layout_height="40dp"/>
                    <TextView
                        android:textColor="#000"
                        android:text="@string/signup_birth"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:layout_width="110dp"
                        android:layout_height="20dp"/>
                    <LinearLayout
                        android:id="@+id/Layyear"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tvYear"
                            android:layout_width="60dp"
                            android:layout_height="30dp"></TextView>

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:text="년" />

                        <TextView
                            android:id="@+id/tvMonth"
                            android:layout_width="40dp"
                            android:layout_height="30dp"></TextView>
                        <TextView
                            android:text="월"
                            android:layout_width="30dp"
                            android:layout_height="30dp" />
                        <TextView
                            android:id="@+id/tvDay"
                            android:layout_width="40dp"
                            android:layout_height="30dp"></TextView>
                        <TextView
                            android:text="일"
                            android:layout_width="30dp"
                            android:layout_height="30dp" />
                    </LinearLayout>
                    <TextView
                        android:textColor="#000"
                        android:text="@string/signup_address"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:layout_width="110dp"
                        android:layout_height="20dp"/>
                    <EditText
                        android:textSize="16dp"
                        android:id="@+id/etAddress"
                        android:layout_width="200dp"
                        android:layout_height="40dp"/>
                    <TextView
                        android:textColor="#000"
                        android:text="@string/signup_phone"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:layout_marginTop="5dp"
                        android:layout_width="110dp"
                        android:layout_height="20dp"/>
                    <EditText
                        android:textSize="16dp"
                        android:id="@+id/etPhone"
                        android:layout_marginTop="5dp"
                        android:layout_width="200dp"
                        android:layout_height="40dp"/>
                    <TextView
                        android:textColor="#000"
                        android:text="@string/signup_email"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:layout_marginTop="5dp"
                        android:layout_width="110dp"
                        android:layout_height="20dp"/>
                    <EditText
                        android:textSize="16dp"
                        android:id="@+id/etMail"
                        android:layout_marginTop="5dp"
                        android:layout_width="200dp"
                        android:layout_height="40dp"/>

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="45dp">
                        <Button
                            android:id="@+id/btnJoin"
                            android:textColor="#000"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/signup"
                            android:background="@drawable/dayofweek_back"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
