<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    tools:context="com.oneproject.www.smartoday.SettingActivity">

    <LinearLayout
        android:id="@+id/rltop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@drawable/shape_list">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/letter1" />
            <RadioGroup
                android:layout_alignParentEnd="true"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rblist"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_check_list"
                    android:button="@null"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/rbIcon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_check_grid"
                    android:button="@null"
                    android:clickable="true" />
            </RadioGroup>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/lltop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user_name" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user_permission" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user_inouts" />

                <TextView
                    android:id="@+id/tvDel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btn_delete" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
            <GridView
                android:id="@+id/userView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:numColumns="3"
                android:visibility="gone" />
        </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:id="@+id/dataplus"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/plus" />
    </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/iot"
            android:layout_marginLeft="53dp"
            android:layout_marginStart="53dp"
            android:layout_toEndOf="@+id/iot"
            android:layout_toRightOf="@+id/iot"
            android:background="@drawable/settingon"
            app:srcCompat="@drawable/settingon" />

        <ImageView
            android:id="@+id/check"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignEnd="@+id/iot"
            android:layout_alignRight="@+id/iot"
            android:layout_centerVertical="true"
            android:layout_marginEnd="81dp"
            android:layout_marginRight="81dp"
            app:srcCompat="@drawable/check" />

        <ImageView
            android:id="@+id/iot"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/check"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/wifi" />
    </RelativeLayout>

</LinearLayout>
